objects/Language_Translations__mdt.object
<CustomObject>
    <fields>
        <fullName>Eng_Values__c</fullName>
        <label>Eng Values</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>French</fullName>
                    <default>true</default>
                    <label>French</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translated_Value__c</fullName>
        <label>Translated Value</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Language Translation</label>
    <pluralLabel>Language Translations</pluralLabel>
</CustomObject>